--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
   <body>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
     <h1>Hello World!</h1>
     <p>Welcome to my first GitHub Pages website!</p>
   </body>
