--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
     </div>
-    <h1>Hello World!</h1>
-    <p>Welcome to my first GitHub Pages website!</p>
+    <h1>Hello World! My name's Joshua</h1>
+    <p>Welcome to my website!</p>
   </body>
 </html>
